--- a/settings/settings.html
+++ b/settings/settings.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -5,6 +6,7 @@
 	</head>
 	<body>
 		<div class="title">HI</div>
+		<button id="exClearId">Clear</button>
 		<script src="/settings/settings.js"></script>
 	</body>
 </html>
