--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,12 +8,7 @@
 	<body id="exBodyId">
 		<form id="exFormId">
 			<label id="exLabelId" for="exInputId">Enter url</label>
-			<input
-				id="exInputId"
-				name="urlName"
-				type="text"
-				placeholder="https://example.com or example.com"
-			/>
+			<input id="exInputId" name="urlName" type="text" placeholder="https://example.com" />
 			<button id="exButtonId" type="submit">Save</button>
 			<button id="exResetId" type="button">Reset</button>
 		</form>
