--- a/settings/settings.html
+++ b/settings/settings.html
@@ -13,7 +13,7 @@
 				type="text"
 				placeholder="https://example.com or example.com"
 			/>
-			<button id="exButtonId" type="submit">Save</button>
+			<button id="exSaveId" type="submit">Save</button>
 			<button id="exResetId" type="button">Reset</button>
 		</form>
 
