--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,7 +7,8 @@
 
 	<body class="body">
 		<form class="ex-form">
-			<label class="ex-label" for="exInputId">Enter url</label>
+			<p class="ex-title">Add a bookmark to the toolbar</p>
+			<label class="ex-label" for="exInputId">Enter URL address:</label>
 			<input
 				class="ex-input"
 				id="exInputId"
